--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">PopCornFactory_EspinozaHector</string>
+    <string name="welcome_text">Welcome to Popcorn Factory, home of the best serie and movies. Just lay down, make some popcorn and enjoy!</string>
+    <string name="button_start">GET ME IN!</string>
 </resources>
